test/error/iocheck/err4.rzy
// Error: response is not allowed to write state

component
  Err4
    response what():R{0,100};
    
  implementation hfsm(A)
    
    var
      a : R{0,100} = 0;
    
    state A
      response what():R{0,100}
        a := 42;
        return 0;
      end
    end
    
  end

